--- a/src/style.css
+++ b/src/style.css
@@ -42,3 +42,40 @@ a:focus {
   color: var(--color-link-hover);
   outline: none;
 }
+
+/* 
+Loading
+*/
+body.loading::before,
+body.loading::after {
+  content: '';
+  position: fixed;
+  z-index: 1000;
+}
+
+body.loading::before {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--color-bg);
+}
+
+body.loading::after {
+  top: 50%;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  margin: -30px 0 0 -30px;
+  border-radius: 50%;
+  opacity: 0.4;
+  background: var(--color-link);
+  animation: loaderAnim 0.7s linear infinite alternate forwards;
+}
+
+@keyframes loaderAnim {
+  to {
+    opacity: 1;
+    transform: scale3d(0.5, 0.5, 1);
+  }
+}
